# Landslide-Warning

./: .gitignore  AGENTS.md  README.md  design.md  framework.md  main.py  pyproject.toml
code/: block_bootstrap.py  convlstm.py  convlstm_capacity_sensitivity.py  convlstm_inner_validation.py  convlstm_rolling_validation.py  convlstm_seed_stability.py  features.py  grid_interp.py  ngboost_warn.py  onset_analysis.py  sensitivity_analysis.py  shap_select.py  shap_stability.py  tangent_angle.py  tangent_stage_review.py  warning_fusion.py  warning_thresholds.py
code/cnn_mamba/: capacity_sensitivity.py  inner_validation.py  model.py  rolling_validation.py  seed_stability.py
code/convlstm/: __init__.py  capacity_sensitivity.py  grid_interp.py  inner_validation.py  model.py  rolling_validation.py  (+1 more)
config/: tangent_reference_stages.csv
data/: features.csv  monitoring_data.csv  station_coords.csv
docs/: claude_next_task_plan.md  design.md  framework.md  framework_status.md  ngboost_tuning_review.md  progress.md  research_tools.md  results_report.md  shap_stability_protocol.md  warning-limitations.md
figures/: README.md
models/: cnn_mamba.pt  convlstm.pt  ngboost.pkl
tests/: test_block_bootstrap.py  test_convlstm.py  test_convlstm_capacity_sensitivity.py  test_convlstm_inner_validation.py  test_convlstm_rolling_validation.py  test_convlstm_seed_stability.py  test_main.py  test_ngboost_warn.py  test_sensitivity_analysis.py  test_shap_select.py  test_shap_stability.py  test_tangent_angle.py  test_tangent_stage_review.py  test_warning_events.py  test_warning_fusion.py
(+79 files in other folders)
