[project]
name = "landslide-warning"
version = "0.1.0"
description = "Reproducible landslide displacement forecasting and warning pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mamba-ssm[causal-conv1d]>=2.2.4",
    "matplotlib>=3.10.9",
    "ngboost>=0.5.10",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "shap>=0.49.1",
    "torch>=2.12.0",
]
